# novel-creator

./: .dockerignore  .env.example  .env.production  .gitignore  .prettierignore  AGENTS.md  Dockerfile  alembic.ini  docker-compose.yml  package.json  pyproject.toml  pyrightconfig.json  run.sh  tailwind.config.js
.github/workflows/: docker-build.yml
.opencode/skills/: SKILL.md
alembic/: env.py
alembic/versions/: 2f4356b0ee6b_add_materials_tables.py  2f4356b0ee6c_add_material_notes_table.py  37593cd8ced1_add_style_column_to_books.py  5a2431f8df98_add_ai_settings_to_global_config.py  5c26fcbf2d50_add_status_to_chapters.py  add_book_init_data.py  b5cff3371f1b_add_core_event_to_chapters.py  d2833dd427d4_add_content_field_to_chapter.py  d5c05fd7a995_initial_migration.py
app/: config.py  constants.py  database.py  main.py  models.py  schemas.py
app/core/: __init__.py  dependencies.py  exceptions.py
app/repositories/: __init__.py  file_repository.py  novel_repository.py
app/routes/: ai.py  books.py  (+3 more)
docs/: 开发计划v1.md
tests/: conftest.py  test_agent_model_resolution.py  test_agent_prompts.py  test_agents.py  test_agents_base.py  test_ai_service.py  test_ai_utils.py  test_cache_optimization.py  test_character_duplicate.py  test_config_helper.py  test_edge_cases.py  test_helpers.py  test_json_helper.py  test_novel_service.py  test_novel_service_async.py  test_routes.py  test_routes_ai_integration.py  test_routes_books_integration.py  test_routes_chapters_integration.py  test_routes_integration.py  test_routes_materials_integration.py  test_routes_settings_integration.py  test_version.py
(+53 files in other folders)
