[project]
name = "deepseek-novel-studio"
version = "0.1.0"
description = "DeepSeek 长篇小说创作平台"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[tool.prettier]
plugins = ["prettier-plugin-jinja2"]
exclude = ["books", "app/static"]

[tool.prettier.plugin-jinja2]
variableFormat = "off"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".venv",
    "venv",
    "books",
    "app/static",
    "app/templates",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
    "E501",  # 行长度已在 line-length 中控制
    "E722",  # 不要在 except 子句中使用 bare 'except'
    "F401",  # 导入未使用（可能是有意的，如 __init__.py）
    "F841",  # 局部变量未使用（可能是有意的）
    "I001",  # 导入排序（可能与格式化冲突）
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["books*", "alembic*", "tests*"]